--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,46 @@
+aniso8601==9.0.1
+annotated-types==0.7.0
 asgiref==3.8.1
-Django==4.1.13
-django-environ==0.11.2
-djangorestframework==3.15.2
-install==1.3.5
+autocommand==2.2.2
+backports.tarfile==1.2.0
+blinker==1.8.2
+cachelib==0.9.0
+cheroot==10.0.1
+CherryPy==18.10.0
+click==8.1.7
+colorama==0.4.6
+dj-database-url==2.2.0
+dnspython==2.6.1
+email_validator==2.2.0
+Flask==3.0.3
+Flask-Caching==2.3.0
+Flask-JWT-Extended==4.6.0
+Flask-RESTful==0.3.10
+greenlet==3.0.3
+idna==3.7
+inflect==7.3.1
+itsdangerous==2.2.0
+jaraco.collections==5.0.1
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.1
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+more-itertools==10.3.0
+portend==3.2.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pydantic==2.8.2
+pydantic_core==2.20.1
+PyJWT==2.8.0
+pymongo==4.8.0
 python-dotenv==1.0.1
-sqlparse==0.2.4
+pytz==2024.1
+six==1.16.0
+sqlparse==0.5.0
+tempora==5.6.0
+typeguard==4.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
+Werkzeug==3.0.3
+zc.lockfile==3.0.post1
