--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 aniso8601==9.0.1
 annotated-types==0.7.0
+asgiref==3.8.1
 async==0.6.2
 autocommand==2.2.2
 backports.tarfile==1.2.0
 blinker==1.8.2
 cachelib==0.9.0
 cheroot==10.0.1
-CherryPy==18.10.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
@@ -15,6 +15,11 @@ Flask==3.0.3
 Flask-Caching==2.3.0
 Flask-JWT-Extended==4.6.0
 Flask-RESTful==0.3.10
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+Hypercorn==0.17.3
+hyperframe==6.0.1
 idna==3.7
 inflect==7.3.1
 itsdangerous==2.2.0
@@ -26,15 +31,18 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 more-itertools==10.3.0
 portend==3.2.0
+priority==2.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 PyJWT==2.8.0
 pymongo==4.8.0
 python-dotenv==1.0.1
 pytz==2024.1
+setuptools==74.0.0
 six==1.16.0
 tempora==5.6.0
 typeguard==4.3.0
 typing_extensions==4.12.2
 Werkzeug==3.0.3
+wsproto==1.2.0
 zc.lockfile==3.0.post1
