--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,12 @@ colorama==0.4.6
 dnspython==2.6.1
 email_validator==2.2.0
 Flask==3.0.3
-Flask-Caching==2.3.0
+Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-RESTful==0.3.10
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-Hypercorn==0.17.3
 hyperframe==6.0.1
 idna==3.7
 inflect==7.3.1
@@ -43,6 +42,7 @@ six==1.16.0
 tempora==5.6.0
 typeguard==4.3.0
 typing_extensions==4.12.2
+uvicorn==0.33.0
 Werkzeug==3.0.6
 wsproto==1.2.0
 zc.lockfile==3.0.post1
